<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">ElandToy</string>

    <string name="app_name">ElandToy</string>

    <string name="hello_world">Hello world!</string>

    <string name="tip_nodata">Sorry, no data!</string>

    <string name="tip_product_author">©2019 Eland.Tong for Direction of the star of works</string>

    <string name="gank_welfare">Welfare</string>

    <string name="gank_menu_welfare">Welfare</string>

    <string name="gank_video">Video</string>

    <string name="gank_menu_video">Break video</string>

    <string name="gank_res">Resource</string>

    <string name="gank_menu_res">Expand resources</string>

    <string name="gank_android">Android</string>

    <string name="gank_menu_android">Android</string>

    <string name="gank_ios">IOS</string>

    <string name="gank_menu_ios">IOS</string>

    <string name="gank_h5">HTML5</string>

    <string name="gank_menu_h5">HTML5</string>

    <string name="gank_app">APP</string>

    <string name="gank_menu_app">APP</string>

    <string name="gank_recommend">Blind Recommended</string>

    <string name="gank_menu_recommend">Blind Recommended</string>

    <string name="gank_menu_setting">Setting</string>

    <string name="gank_menu_fav">Collection</string>

    <string name="gank_menu_qrcode">Scan</string>

    <string name="gank_menu_submit">Submit</string>

    <string name="gank_search">Search</string>

    <string name="gank_search_edit">Search</string>

    <string name="gank_about">About gank.io</string>

    <string name="gank_toolbar">Gank.io Oh!</string>

    <string name="web_act_copy">Copy link</string>

    <string name="web_act_open">Browser open</string>

    <string name="setting_act_toolbar">Setting</string>

    <string name="setting_clear_cache">Clear cache</string>

    <string name="setting_clear_cache_tip">Cache use size: </string>

    <string name="setting_open_source">Open source framework use</string>

    <string name="setting_open_source_tip">Application dependency</string>

    <string name="setting_legal">Legal terms</string>

    <string name="setting_legal_tip">Applied legal information</string>

    <string name="setting_about">About ElandToy</string>

    <string name="setting_about_tip">Application developer</string>

    <string name="setting_donation">Donation</string>

    <string name="setting_donation_tip">Please author a cup of tea</string>

    <string name="setting_alert_title">Clear local cache</string>

    <string name="setting_alert_tip">Whether to clear the local database cache ?</string>

    <string name="setting_alert_sure">Confirm</string>

    <string name="setting_alert_cancel">Cancel</string>

    <string name="setting_clear_complete">Cache has been cleaned up!</string>

    <string name="fav_alert_title">Empty collection</string>

    <string name="fav_alert_tip">Whether to clear all local collections ?</string>

    <string name="fav_alert_sure">Confirm</string>

    <string name="fav_alert_cancel">Cancel</string>

    <string name="fav_clear_complete">Collection has been cleaned up!</string>

    <string name="permission_camera">Camera</string>

    <string name="permission_save_storage">Storing data</string>

    <string name="permission_read_storage">Read data</string>

    <string name="permission_phone_state">Equipment status</string>

    <string name="permission_gps_location">GPS positioning</string>

    <string name="permission_net_location">Network positioning</string>

    <string name="search_none_content_tip">Please enter what you want to search for!</string>

    <string name="action_none_net_tip">No internet connection!</string>

    <string name="action_nodata_tip">No matching data!</string>

    <string name="act_fav_toolbar">Collection</string>

    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="downloaded"> %s %%</string>

    <string name="title_activity_oksettings">Settings</string>

    <string name="title_activity_search">Search</string>

    <string name="title_activity_fav">Collection</string>

    <string name="title_activity_qrcode">Scan</string>

    <string name="act_fav_menu_clear">Clear All</string>

    <string name="gank_item_open_image">View image</string>

    <string name="act_submit_cat">Publish classification</string>

    <string name="act_submit_btn">Submit review</string>

    <string name="act_submit_link">link address</string>

    <string name="act_submit_desc">Description</string>

    <string name="act_submit_nick">Author nickname</string>

    <string name="act_submit_link_tip">Link address of dry gank goods page or image</string>

    <string name="act_submit_desc_tip">A brief overview of dry gank goods content</string>

    <string name="act_submit_nick_tip">Dry gank goods author nickname or NetID (optional)</string>

    <string name="act_submit_toolbar">Publish dry gank goods</string>

    <string name="act_submit_category">Dry gank goods classification</string>

    <string name="act_submit_menu_clear">Empty content</string>

    <string name="act_submit_err_tip_pos">No such classification!</string>

    <string name="act_submit_err_tip_link_null">Url can\'t be empty!</string>

    <string name="act_submit_err_tip_desc_null">Description cannot be empty!</string>

    <string name="act_submit_err_tip_who_null">Username can not be blank!</string>

    <string name="act_submit_err_tip_link">The Url you entered is incorrect!</string>

    <string name="act_submit_loading">Submitting...</string>

    <string name="act_qrcode_result_title">Recognition result</string>

    <string name="act_web_download_tip">Downloading files in the background!</string>

    <string name="act_web_download_end_tip">Background download completed!</string>

    <string name="act_qrcode_result_null_tip">No information recognized!</string>

    <string name="act_submit_succ">Submitted successfully!</string>

    <string name="act_submit_err">Submit failed! Reason: </string>

    <string name="act_submit_err_net">Submit failed! Reason: net error</string>

    <string name="content_no_data_reload">Retry</string>

    <string name="action_open_github_url">https://github.com/elandTong/ElandToy</string>

    <string name="action_open_github_title">my home page</string>

    <string name="action_open_legal_url">https://github.com/elandTong/ElandToy</string>

    <string name="action_open_legal_title">Legal terms</string>

    <string name="action_open_about_url">https://github.com/elandTong/ElandToy</string>

    <string name="action_open_about_title">About ElandToy</string>

    <string name="action_open_donation_url">https://github.com/elandTong/ElandToy</string>

    <string name="action_open_donation_title">Donation</string>

    <string name="act_qrcode_scan_text">Place the QR code image in the identification box</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
